Dialog Tabs and bugfixes - Improved tabs in dialogs to correspond to the design refres. - Fixed an overflow bug.

--- a/skins/moono_haiku/dialog.css
+++ b/skins/moono_haiku/dialog.css
@@ -82,7 +82,7 @@ Comments in this file will give more details about each of the above blocks.
 	color: #2f3338;
 
 	border-bottom: 1px solid #ccc;
-	padding: 6px 10px;
+	padding: 6px 0px;
 
 	-moz-border-radius: 6px 6px 0 0;
 	-webkit-border-radius: 6px 6px 0 0;
@@ -109,7 +109,7 @@ Comments in this file will give more details about each of the above blocks.
 .cke_dialog_contents_body
 {
 	overflow: auto;
-	padding: 17px 10px 5px 10px;
+	padding: 17px 0px 5px 0px;
 	margin-top: 22px;
 }
 
@@ -181,7 +181,7 @@ The .cke_dialog_tab_selected class is appended to the active tab.
 	margin: 5px 0 0;
 	position: absolute;
 	z-index: 2;
-	left: 10px;
+	left: 24px;
 }
 
 .cke_rtl .cke_dialog_tabs
@@ -203,9 +203,9 @@ a.cke_dialog_tab
 	color: #595959;
 	border: 1px solid #bfbfbf;
 
-	-moz-border-radius: 3px 3px 0 0;
-	-webkit-border-radius: 3px 3px 0 0;
-	border-radius: 3px 3px 0 0;
+	-moz-border-radius: 6px 6px 0 0;
+	-webkit-border-radius: 6px 6px 0 0;
+	border-radius: 6px 6px 0 0;
 
 	background: #d4d4d4;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#ededed));
@@ -572,12 +572,7 @@ a.cke_dialog_ui_button
 	background-image: linear-gradient(to top, rgba(80, 80, 80, 0.05) 0%, rgba(46, 46, 46, 0) 25%);
 	background-image: -webkit-linear-gradient(bottom, rgba(80, 80, 80, 0.05) 0%, rgba(46, 46, 46, 0) 25%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#0D505050', EndColorStr='#002E2E2E', GradientType=0);
-
-}
-
-span.cke_dialog_ui_button
-{
-	padding: 0 10px;
+	width: auto !important;
 }
 
 a.cke_dialog_ui_button:hover
